--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -14,7 +14,7 @@ jobs:
           submodules: true
 
     - name: Install latest PHPUnit
-      run: wget https://phar.phpunit.de/phpunit.phar
+      run: wget https://phar.phpunit.de/phpunit-9.5.24.phar
 
     - name: Run Tests
-      run: phpdbg -qrr phpunit.phar tests --configuration tests/phpunit.xml
+      run: phpdbg -qrr phpunit-9.5.24.phar tests --configuration tests/phpunit.xml
